fix: fix broken css for togglable bib headings

--- a/src/css/_bibliography.scss
+++ b/src/css/_bibliography.scss
@@ -64,3 +64,8 @@
         }
     }
 }
+
+summary .abt-bibliography__heading {
+    display: inline-flex;
+    width: calc(100% - 1em);
+}
