--- a/src/js/gutenberg/blocks/bibliography/style.scss
+++ b/src/js/gutenberg/blocks/bibliography/style.scss
@@ -1,8 +1,8 @@
 :global(.editor-styles-wrapper) {
     .heading {
-        display: flex;
+        display: inline-flex;
         margin: 1rem 0;
-        width: 100%;
+        width: calc(100% - 1em);
         overflow: hidden;
 
         input {
@@ -17,10 +17,5 @@
                 outline: 0;
             }
         }
-    }
-
-    .summary {
-        display: flex;
-        align-items: center;
     }
 }
